tests/sksl/errors/Ossfuzz38106.glsl
### Compilation failed:

error: 1: expected identifier, but found ';'
error: 2: expected ';', but found ''
2 errors
